latest changes - still having issues with product images not spacing between and getting the location and hours to be in a row and not a column.

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,4 +1,3 @@
-html,
 body {
   font-family: Helvetica;
   font-size: 18px;
@@ -55,67 +54,84 @@ header img {
   font-weight: bold;
 }
 .links {
+  background-color: firebrick;
+}
+.links ul {
   display: flex;
   justify-content: space-between;
-  color: white;
-  text-align: center;
-  flex-grow: 1;
-  background-color: firebrick;
-  padding: 0.75rem 0;
-  width: 100%;
   }
+
 .links a {
+    display: inline-block;
     color: white;
+    padding: 0.75rem 0;
+    z-index: 1;
   }
 
 /* Featured Products*/
 #product {
   display: flex;
   justify-content: space-between;
+  align-content: center;
   margin: 3rem 0;
   }
-.products {
+.product-image {
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-content: space-between;
   border: 4px solid black;
   width: 30%;
-  justify-content: center;
-  align-items: center;
   }
 .product-image img {
-  height: 9rem;
-  margin: 2em 0;
+  display: block;
+  max-height: 9rem;
+  max-width: 8rem;
+  padding: 2rem 0;
+  margin: auto;
   }
-.description {
+.product-image span {
   background-color: black;
   color: white;
   padding: 0.5rem 0;
   text-align: center;
-  border: 4px solid black;
+  width: 100%;
   }
 
   /* Business-Info */
-#business-info {
-  display: flex;
-  justify-content: center;
-  margin: 3rem 0 4rem 0;
-  }
 .business-info {
-  width: 35%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  padding: 3rem 0 4rem 0;
+  margin: auto;
   }
-.location,
+.business-blocks {
+  width: 35%;
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  }
+.location h4 {
+  background-color: black;
+  color: white;
+  padding: 1rem 2rem;
+  text-align: left;
+  }
 .hours h4 {
   background-color: black;
   color: white;
-  }
-.location,
-.hours h3 {
-  font-family: helvetica;
-}
-.location,
-.hours {
-  display: block;
   padding: 1rem 2rem;
+  text-align: left;
+  }
+.location span {
+  width: 100%;
+  color: black;
 }
+.hours span {
+  width: 100%;
+  color: black;
+}
+
 /* Footer*/
 footer {
   background-color: black;
